Добавляет правки в планшетную версию

--- a/source/photo.html
+++ b/source/photo.html
@@ -307,6 +307,8 @@
           <div class="post-form__wrapper container">
             <div class="post-form__upload">
               <picture>
+                <source media="(min-width: 960px)" srcset="img/photo-road-desktop@1x.jpg">
+                <source media="(min-width: 660px)" srcset="img/photo-road-tablet@1x.jpg">
                 <img class="post-form__setup-user-pic" src="img/photo-road-mobile@1x.jpg" alt="Новая фотографии">
               </picture>
               <label class="visually-hidden" for="avatar">Загрузите фотографию</label>
