--- a/source/index.html
+++ b/source/index.html
@@ -309,9 +309,9 @@
       <section  class="map">
         <h2 class="visually-hidden">Карта местонахождения</h2>
         <picture>
-          <source media="(min-width: 960px)" srcset="img/bg-map-desktop_1x.jpg">
-          <source media="(min-width: 660px)" srcset="img/bg-map-tablet_1x.jpg">
-          <img class="map__image" src="img/bg-map-mobile_1x.png" width="320" height="200" alt="Карта адреса Пинк">
+          <source media="(min-width: 960px)" srcset="img/bg-map-desktop_1x.jpg 1x, img/bg-map-desktop@2x.jpg 2x">
+          <source media="(min-width: 660px)" srcset="img/bg-map-tablet_1x.jpg 1x, img/bg-map-tablet@2x.jpg 2x">
+          <img class="map__image" src="img/bg-map-mobile_1x.png" srcset="img/bg-map-mobile@2x.jpg 2x" width="320" height="200" alt="Карта адреса Пинк">
         </picture>
         <iframe class="map__google" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1680.6059930518893!2d30.321269608937822!3d59.93896839959574!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1585410296204!5m2!1sru!2sru" width="320" height="200" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
       </section>
