--- a/source/photo.html
+++ b/source/photo.html
@@ -154,9 +154,9 @@
           <h2 class="panorama__title">Панорама дня</h2>
           <a class="panorama__foto" href="#">
             <picture>
-              <source media="(min-width: 960px)" srcset="img/panorama-desktop_1.jpg">
-              <source media="(min-width: 660px)" srcset="img/panorama-tablet_1.jpg">
-              <img src="img/panorama-mobile@1x.jpg" width="320" height="137" alt="Фотография победителя">
+              <source media="(min-width: 960px)" srcset="img/panorama-desktop_1.jpg 1x, img/panorama-desktop@2x.jpg 2x">
+              <source media="(min-width: 660px)" srcset="img/panorama-tablet_1.jpg 1x, img/panorama-tablet@2x.jpg 2x">
+              <img src="img/panorama-mobile@1x.jpg" srcset="img/panorama-mobile@2x.jpg" width="320" height="137" alt="Фотография победителя">
             </picture>
           </a>
           <div class="panorama__wrapper">
@@ -177,9 +177,9 @@
           <li class="gallery__item">
             <a class="gallery__foto" href="#">
               <picture>
-                <source media="(min-width: 960px)" srcset="img/photo-car-desktop@1x.jpg">
-                <source media="(min-width: 660px)" srcset="img/photo-car-tablet@1x.jpg">
-                <img src="img/photo-car-mobile@1x.jpg" width="280" height="180" alt="Фотография автомобиля. Добавил Левон">
+                <source media="(min-width: 960px)" srcset="img/photo-car-desktop@1x.jpg 1x, img/photo-car-desktop@2x.jpg 2x">
+                <source media="(min-width: 660px)" srcset="img/photo-car-tablet@1x.jpg 1x, img/photo-car-tablet@2x.jpg 2x">
+                <img src="img/photo-car-mobile@1x.jpg" srcset="img/photo-car-mobile@2x.jpg 2x" width="280" height="180" alt="Фотография автомобиля. Добавил Левон">
               </picture>
             </a>
             <div class="gallery__wrapper">
@@ -198,9 +198,9 @@
           <li class="gallery__item">
             <a class="gallery__foto" href="#">
               <picture>
-                <source media="(min-width: 960px)" srcset="img/photo-drumset-desktop@1x.jpg">
-                <source media="(min-width: 660px)" srcset="img/photo-drumset-tablet@1x.jpg">
-                <img src="img/photo-drumset-mobile@1x.jpg" width="280" height="180" alt="Фотография барабанов. Добавил Антон">
+                <source media="(min-width: 960px)" srcset="img/photo-drumset-desktop@1x.jpg 1x, img/photo-drumset-desktop@2x.jpg 2x">
+                <source media="(min-width: 660px)" srcset="img/photo-drumset-tablet@1x.jpg 1x, img/photo-drumset-tablet@2x.jpg 2x">
+                <img src="img/photo-drumset-mobile@1x.jpg" srcset="img/photo-drumset-mobile@2x.jpg 2x" width="280" height="180" alt="Фотография барабанов. Добавил Антон">
               </picture>
             </a>
             <div class="gallery__wrapper">
@@ -219,9 +219,9 @@
           <li class="gallery__item">
             <a class="gallery__foto" href="#">
               <picture>
-                <source media="(min-width: 960px)" srcset="img/photo-window-desktop@1x.jpg">
-                <source media="(min-width: 660px)" srcset="img/photo-window-tablet@1x.jpg">
-                <img src="img/photo-window-mobile@1x.jpg" width="280" height="180" alt="Фотография стеклянного хола. Добавил Борис">
+                <source media="(min-width: 960px)" srcset="img/photo-window-desktop@1x.jpg 1x, img/photo-window-desktop@2x.jpg 2x">
+                <source media="(min-width: 660px)" srcset="img/photo-window-tablet@1x.jpg 1x, img/photo-window-tablet@2x.jpg 2x">
+                <img src="img/photo-window-mobile@1x.jpg" srcset="img/photo-window-mobile@2x.jpg 2x" width="280" height="180" alt="Фотография стеклянного хола. Добавил Борис">
               </picture>
             </a>
             <div class="gallery__wrapper">
@@ -240,9 +240,9 @@
           <li class="gallery__item">
             <a class="gallery__foto" href="#">
               <picture>
-                <source media="(min-width: 960px)" srcset="img/photo-fair-desktop@1x.jpg">
-                <source media="(min-width: 660px)" srcset="img/photo-fair-tablet@1x.jpg">
-                <img src="img/photo-fair-mobile@1x.jpg" width="280" height="180" alt="Фотография Кубанской бахчи. Добавил Сергей">
+                <source media="(min-width: 960px)" srcset="img/photo-fair-desktop@1x.jpg 1x, img/photo-fair-desktop@2x.jpg 2x">
+                <source media="(min-width: 660px)" srcset="img/photo-fair-tablet@1x.jpg 1x, img/photo-fair-tablet@2x.jpg 2x">
+                <img src="img/photo-fair-mobile@1x.jpg" srcset="img/photo-fair-mobile@2x.jpg 2x" width="280" height="180" alt="Фотография Кубанской бахчи. Добавил Сергей">
               </picture>
             </a>
             <div class="gallery__wrapper">
@@ -261,9 +261,9 @@
           <li class="gallery__item">
             <a class="gallery__foto" href="#">
               <picture>
-                <source media="(min-width: 960px)" srcset="img/photo-pov-desktop@1x.jpg">
-                <source media="(min-width: 660px)" srcset="img/photo-pov-tablet@1x.jpg">
-                <img src="img/photo-pov-mobile@1x.jpg" width="280" height="180" alt="Фотография гор летом. Добавил Максим">
+                <source media="(min-width: 960px)" srcset="img/photo-pov-desktop@1x.jpg 1x, img/photo-pov-desktop@2x.jpg 2x">
+                <source media="(min-width: 660px)" srcset="img/photo-pov-tablet@1x.jpg 1x, img/photo-pov-tablet@2x.jpg 2x">
+                <img src="img/photo-pov-mobile@1x.jpg" srcset="img/photo-pov-mobile@2x.jpg 2x" width="280" height="180" alt="Фотография гор летом. Добавил Максим">
               </picture>
             </a>
             <div class="gallery__wrapper">
@@ -282,9 +282,9 @@
           <li class="gallery__item">
             <a class="gallery__foto" href="#">
               <picture>
-                <source media="(min-width: 960px)" srcset="img/photo-wing-desktop@1x.jpg">
-                <source media="(min-width: 660px)" srcset="img/photo-wing-tablet@1x.jpg">
-                <img src="img/photo-wing-mobile@1x.jpg" width="280" height="180" alt="Фотография рассвета через эллюминатор самолёта. Добавила Надежда">
+                <source media="(min-width: 960px)" srcset="img/photo-wing-desktop@1x.jpg 1x, img/photo-wing-desktop@2x.jpg 2x">
+                <source media="(min-width: 660px)" srcset="img/photo-wing-tablet@1x.jpg 1x, img/photo-wing-tablet@2x.jpg 2x">
+                <img src="img/photo-wing-mobile@1x.jpg" srcset="img/photo-wing-mobile@2x.jpg 2x" width="280" height="180" alt="Фотография рассвета через эллюминатор самолёта. Добавила Надежда">
               </picture>
             </a>
             <div class="gallery__wrapper">
@@ -310,9 +310,9 @@
           <div class="post-form__wrapper container">
             <div class="post-form__upload">
               <picture>
-                <source media="(min-width: 960px)" srcset="img/photo-road-desktop@1x.jpg">
-                <source media="(min-width: 660px)" srcset="img/photo-road-tablet@1x.jpg">
-                <img class="post-form__setup-user-pic" src="img/photo-road-mobile@1x.jpg" alt="Новая фотографии">
+                <source media="(min-width: 960px)" srcset="img/photo-road-desktop@1x.jpg 1x, img/photo-road-desktop@2x.jpg 2x">
+                <source media="(min-width: 660px)" srcset="img/photo-road-tablet@1x.jpg 1x, img/photo-road-tablet@2x.jpg 2x">
+                <img class="post-form__setup-user-pic" src="img/photo-road-mobile@1x.jpg" srcset="img/photo-road-mobile@2x.jpg 2x" alt="Новая фотографии">
               </picture>
               <label class="visually-hidden" for="avatar">Загрузите фотографию</label>
               <input class="post-form__input" type="file" name="avatar" id="avatar">
