--- a/source/form.html
+++ b/source/form.html
@@ -10,11 +10,6 @@
     <header class="page-header page-header--nojs">
       <div class="page-header__wrapper">
         <a class="page-header__logo" href="index.html">
-          <!--<picture>
-            <source media="(min-width: 960px)" srcset="img/logo-pink-white-desktop.svg">
-            <source media="(min-width: 660px)" srcset="img/logo-pink-white-tablet.svg">
-            <img class="page-header__logo-image" src="img/logo-pink-white-mobile.svg" widht="74.426" height="22.859" alt="Логотип Пинк">
-          </picture>-->
           <svg style="display:none;">
             <style>
                 .page-header__logo svg {
@@ -136,7 +131,7 @@
                 <a>Конкурс</a>
               </li>
               <li class="site-list__item">
-                <a href="#"><span class="site-list__item__upper">Html</span> Academy</a>
+                <a href="https://htmlacademy.ru/intensive/adaptive"><span class="site-list__item__upper">Html</span> Academy</a>
               </li>
             </ul>
           </div>
@@ -321,19 +316,21 @@
         </div>
       </div>
     </footer>
-    <section class="popup popup__good">
-      <h2 class="popup__title container">Ваша заявка отправлена</h2>
-      <p class="popup__message container">Спасибо за ваше участие, ваша заявка уже поступила к нам.
-        В ближайшее время<br>мы рассмотрим её и<br>оповестим вас.</p>
+    <section class="popup popup--good">
+      <h2 class="popup__title">Ваша заявка отправлена</h2>
+      <p class="popup__message">Спасибо за ваше участие, ваша заявка уже поступила к нам.
+        В ближайшее время мы рассмотрим её и<br> оповестим вас.</p>
       <div class="popup__wrapper">
-        <button class="popup__button popup__button-good button container" type="button" name="button">Закрыть окно</button>
+        <button class="popup__button popup__button--good button" type="button" name="button">Закрыть окно</button>
       </div>
     </section>
 
-    <section class="popup popup__error container">
+    <section class="popup popup--error">
       <h2 class="popup__title">Что-то пошло не так!</h2>
       <p class="popup__message">Проверьте поля, выделенные красным, скорее всего вы забыли их заполнить</p>
-      <button class="popup__button popup__button-error button" type="button" name="button">Ок</button>
+      <div class="popup__wrapper">
+        <button class="popup__button popup__button--error button" type="button" name="button">Ок</button>
+      </div>
     </section>
   <script src="js/menu.js"></script>
   <script src="js/popup.js"></script>
