--- a/source/photo.html
+++ b/source/photo.html
@@ -131,7 +131,7 @@
                 <a href="form.html">Конкурс</a>
               </li>
               <li class="site-list__item">
-                <a href="#"><span class="site-list__item__upper">Html</span> Academy</a>
+                <a href="https://htmlacademy.ru/intensive/adaptive"><span class="site-list__item__upper">Html</span> Academy</a>
               </li>
             </ul>
           </div>
@@ -152,10 +152,10 @@
 
         <article class="gallery__panorama panorama">
           <h2 class="panorama__title">Панорама дня</h2>
-          <a class="panorama__foto" href="#">
+          <a class="panorama__foto" href="img/panorama-desktop@2x.jpg">
             <picture>
-              <source media="(min-width: 960px)" srcset="img/panorama-desktop_1.jpg 1x, img/panorama-desktop@2x.jpg 2x">
-              <source media="(min-width: 660px)" srcset="img/panorama-tablet_1.jpg 1x, img/panorama-tablet@2x.jpg 2x">
+              <source media="(min-width: 960px)" srcset="img/panorama-desktop@1x.jpg 1x, img/panorama-desktop@2x.jpg 2x">
+              <source media="(min-width: 660px)" srcset="img/panorama-tablet@1x.jpg 1x, img/panorama-tablet@2x.jpg 2x">
               <img src="img/panorama-mobile@1x.jpg" srcset="img/panorama-mobile@2x.jpg" width="320" height="137" alt="Фотография победителя">
             </picture>
           </a>
@@ -175,7 +175,7 @@
 
         <ul class="gallery__list container">
           <li class="gallery__item">
-            <a class="gallery__foto" href="#">
+            <a class="gallery__foto" href="img/photo-car-desktop@2x.jpg">
               <picture>
                 <source media="(min-width: 960px)" srcset="img/photo-car-desktop@1x.jpg 1x, img/photo-car-desktop@2x.jpg 2x">
                 <source media="(min-width: 660px)" srcset="img/photo-car-tablet@1x.jpg 1x, img/photo-car-tablet@2x.jpg 2x">
@@ -196,7 +196,7 @@
           </li>
 
           <li class="gallery__item">
-            <a class="gallery__foto" href="#">
+            <a class="gallery__foto" href="img/photo-drumset-desktop@2x.jpg">
               <picture>
                 <source media="(min-width: 960px)" srcset="img/photo-drumset-desktop@1x.jpg 1x, img/photo-drumset-desktop@2x.jpg 2x">
                 <source media="(min-width: 660px)" srcset="img/photo-drumset-tablet@1x.jpg 1x, img/photo-drumset-tablet@2x.jpg 2x">
@@ -217,7 +217,7 @@
           </li>
 
           <li class="gallery__item">
-            <a class="gallery__foto" href="#">
+            <a class="gallery__foto" href="img/photo-window-desktop@2x.jpg">
               <picture>
                 <source media="(min-width: 960px)" srcset="img/photo-window-desktop@1x.jpg 1x, img/photo-window-desktop@2x.jpg 2x">
                 <source media="(min-width: 660px)" srcset="img/photo-window-tablet@1x.jpg 1x, img/photo-window-tablet@2x.jpg 2x">
@@ -238,7 +238,7 @@
           </li>
 
           <li class="gallery__item">
-            <a class="gallery__foto" href="#">
+            <a class="gallery__foto" href="img/photo-fair-desktop@2x.jpg">
               <picture>
                 <source media="(min-width: 960px)" srcset="img/photo-fair-desktop@1x.jpg 1x, img/photo-fair-desktop@2x.jpg 2x">
                 <source media="(min-width: 660px)" srcset="img/photo-fair-tablet@1x.jpg 1x, img/photo-fair-tablet@2x.jpg 2x">
@@ -259,7 +259,7 @@
           </li>
 
           <li class="gallery__item">
-            <a class="gallery__foto" href="#">
+            <a class="gallery__foto" href="img/photo-pov-desktop@2x.jpg">
               <picture>
                 <source media="(min-width: 960px)" srcset="img/photo-pov-desktop@1x.jpg 1x, img/photo-pov-desktop@2x.jpg 2x">
                 <source media="(min-width: 660px)" srcset="img/photo-pov-tablet@1x.jpg 1x, img/photo-pov-tablet@2x.jpg 2x">
@@ -280,7 +280,7 @@
           </li>
 
           <li class="gallery__item">
-            <a class="gallery__foto" href="#">
+            <a class="gallery__foto" href="img/photo-wing-desktop@2x.jpg">
               <picture>
                 <source media="(min-width: 960px)" srcset="img/photo-wing-desktop@1x.jpg 1x, img/photo-wing-desktop@2x.jpg 2x">
                 <source media="(min-width: 660px)" srcset="img/photo-wing-tablet@1x.jpg 1x, img/photo-wing-tablet@2x.jpg 2x">
@@ -347,7 +347,7 @@
                   </button>
                   <div class="post-form__range-controls">
                     <div class="post-form__scale"></div>
-                    <div class="post-form__range-toggle"></div>
+                    <div class="post-form__range-toggle" tabindex="0"></div>
                   </div>
                 </div>
 
@@ -360,7 +360,7 @@
                   </button>
                   <div class="post-form__range-controls">
                     <div class="post-form__scale"></div>
-                    <div class="post-form__range-toggle"></div>
+                    <div class="post-form__range-toggle" tabindex="0"></div>
                   </div>
                 </div>
 
@@ -373,7 +373,7 @@
                   </button>
                   <div class="post-form__range-controls">
                     <div class="post-form__scale"></div>
-                    <div class="post-form__range-toggle"></div>
+                    <div class="post-form__range-toggle" tabindex="0"></div>
                   </div>
                 </div>
               </div>
