--- a/source/index.html
+++ b/source/index.html
@@ -147,9 +147,9 @@
           <p class="download__paragraf">Взгляните на жизнь иначе!</p>
           <a class="download__button button" href="https://www.apple.com/ru/ios/app-store/">Скачать приложение</a>
           <ul class="download__icon icon-list">
-            <li class="icon-list__item icon-list--ios"><a href="https://www.apple.com/ru/ios/app-store/"><span class="visually-hidden">Иконка ios</span></a></li>
-            <li class="icon-list__item icon-list--android"><a href="https://www.android.com/"><span class="visually-hidden">Иконка Android</span></a></li>
-            <li class="icon-list__item icon-list--windows"><a href="https://www.microsoft.com/en-us/store/apps/windows"><span class="visually-hidden">Иконка Windows</span></a></li>
+            <li class="icon-list__item icon-list__item--ios"><a href="https://www.apple.com/ru/ios/app-store/"><span class="visually-hidden">Иконка ios</span></a></li>
+            <li class="icon-list__item icon-list__item--android"><a href="https://www.android.com/"><span class="visually-hidden">Иконка Android</span></a></li>
+            <li class="icon-list__item icon-list__item--windows"><a href="https://www.microsoft.com/en-us/store/apps/windows"><span class="visually-hidden">Иконка Windows</span></a></li>
           </ul>
           <p class="download__access">Доступно для iPhone, iPad, Android, Windows Phone, OS X, Windows 8</p>
         </div>
@@ -211,8 +211,8 @@
               </div>
             </li>
           </ul>
-          <button class="slider__toggle--left" type="button" name="left"><span class="visually-hidden">4</span></button>
-          <button class="slider__toggle--right" type="button" name="right"><span class="visually-hidden">5</span></button>
+          <button class="slider__toggle slider__toggle--left" type="button" name="left"><span class="visually-hidden">4</span></button>
+          <button class="slider__toggle slider__toggle--right" type="button" name="right"><span class="visually-hidden">5</span></button>
           <p class="reviews__toggles slider__toggles">
             <button class="slider__toggle slider__toggle--active" type="button"><span class="visually-hidden">1</span></button>
             <button class="slider__toggle" type="button"><span class="visually-hidden">2</span></button>
