--- a/source/form.html
+++ b/source/form.html
@@ -5,6 +5,10 @@
     <title>HTML Academy: Пинк, главная страница</title>
     <link rel="stylesheet" href="css/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script>
+      document.createElement( "picture" );
+    </script>
+    <script src="js/picturefill.min.js" async></script>
   </head>
   <body>
     <header class="page-header page-header--nojs">
