Добавляет градиент и заголовки

--- a/source/form.html
+++ b/source/form.html
@@ -119,7 +119,7 @@
         </fieldset>
 
         <fieldset class="form__progress">
-          <legend class="form__name">Ваши безбашенные достежения в путешествии</legend>
+          <legend class="form__name">Ваши безбашенные достижения в путешествии</legend>
           <div class="form__progress-wrapper">
             <p class="form__block">
               <input class="form__btn visually-hidden" type="checkbox" name="selfie-shark" id="selfie-shark" checked>
