--- a/source/index.html
+++ b/source/index.html
@@ -10,7 +10,7 @@
     </script>
     <script src="js/picturefill.min.js" async></script>
     <script src="js/svg4everybody.min.js" async></script>
-    <link rel="preload" href="/fonts/opensans.woff2" as="font">
+    <link rel="preload" href="fonts/opensans.woff2" as="font">
   </head>
   <body>
     <div style="display: none">
