--- a/source/photo.html
+++ b/source/photo.html
@@ -10,7 +10,7 @@
     </script>
     <script src="js/picturefill.min.js" async></script>
     <script src="js/svg4everybody.min.js" async></script>
-    <link rel="preload" href="/fonts/opensans.woff2" as="font">
+    <link rel="preload" href="fonts/opensans.woff2" as="font">
   </head>
   <body>
     <div style="display: none">
@@ -302,29 +302,11 @@
 
             <div class="post-form__setings-wrapper">
               <div class="post-form__setings">
-                <svg style="display: none;">
-                  <symbol id="crop" viewBox="0 0 44 44">
-                    <path fill="none" d="M0,0h48v48H0V0z"/>
-                    <path d="M34,30h4V14c0-2.21-1.79-4-4-4H18v4h16V30z M14,34V2h-4v8H2v4h8v20c0,2.21,1.79,4,4,4h20v8h4v-8h8v-4H14z"/>
-                  </symbol>
-
-                  <symbol id="fill" viewBox="0 0 48 43">
-                    <path fill="none" d="M0,0h48v48H0V0z"/>
-                    <path d="M33.12,17.88L15.24,0l-2.83,2.83l4.76,4.76L6.88,17.88c-1.17,1.17-1.17,3.07,0,4.24l11,11C18.46,33.71,19.23,34,20,34 s1.54-0.29,2.12-0.88l11-11C34.29,20.95,34.29,19.05,33.12,17.88z M10.41,20L20,10.42L29.59,20H10.41z M38,23c0,0-4,4.33-4,7 c0,2.21,1.79,4,4,4s4-1.79,4-4C42,27.33,38,23,38,23z"/>
-                    <rect y="40" width="48" height="3"/>
-                  </symbol>
-
-                  <symbol id="contrast" viewBox="-35.422 -7.96 32 32">
-                    <path d="M-19.462-3.96c6.595,0,11.96,5.365,11.96,11.96s-5.365,11.96-11.96,11.96S-31.422,14.595-31.422,8 S-26.057-3.96-19.462-3.96 M-19.462-7.96c-8.814,0-15.96,7.145-15.96,15.96c0,8.813,7.146,15.96,15.96,15.96S-3.502,16.813-3.502,8 C-3.502-0.815-10.648-7.96-19.462-7.96L-19.462-7.96z"/>
-                    <path d="M-19.462,16.331c4.706,0,8.52-3.813,8.52-8.52c0-4.705-3.813-8.519-8.52-8.519"/>
-                  </symbol>
-                </svg>
-
                 <div class="post-form__block post-form__block--crop post-form__block--active">
                   <button class="post-form__button post-form__button--crop" type="button" name="button">
                     <span class="visually-hidden">обрезать фото</span>
                     <svg width="48px" height="44px">
-                      <use class="post-form__svg-active" xlink:href="#crop"></use>
+                      <use class="post-form__svg-active" xlink:href="img/sprite.svg#icon-editor-crop"></use>
                     </svg>
                   </button>
                   <div class="post-form__range-controls">
@@ -337,7 +319,7 @@
                   <button class="post-form__button post-form__button--fill" type="button" name="button">
                     <span class="visually-hidden">контрастность</span>
                     <svg width="48px" height="44px">
-                      <use class="post-form__svg-active" xlink:href="#fill"></use>
+                      <use class="post-form__svg-active" xlink:href="img/sprite.svg#icon-editor-fill"></use>
                     </svg>
                   </button>
                   <div class="post-form__range-controls">
@@ -350,7 +332,7 @@
                   <button class="post-form__button post-form__button--contrast" type="button" name="button">
                     <span class="visually-hidden">яркость</span>
                     <svg width="32px" height="32px">
-                      <use class="post-form__svg-active" xlink:href="#contrast"></use>
+                      <use class="post-form__svg-active" xlink:href="img/sprite.svg#icon-editor-contrast"></use>
                     </svg>
                   </button>
                   <div class="post-form__range-controls">
