--- a/source/index.html
+++ b/source/index.html
@@ -19,7 +19,7 @@
     <header class="page-header page-header--nojs">
       <div class="page-header__wrapper">
         <a class="page-header__logo">
-          <svg style="display:none;">
+          <!--svg style="display:none;">
             <symbol id="page-header__logo-mobile"  viewBox="0 0 74.426 22.859">
               <g>
                 <path fill="#FFFFFF" d="M0,1.449c0-0.708,0.58-1.288,1.256-1.288h7.18c5.087,0,8.436,2.704,8.436,7.147v0.064 c0,4.861-4.057,7.373-8.854,7.373H2.544v6.825c0,0.708-0.58,1.288-1.288,1.288C0.58,22.859,0,22.279,0,21.571V1.449z M8.114,12.428 c3.734,0,6.182-1.996,6.182-4.958V7.405c0-3.22-2.415-4.894-6.054-4.894H2.544v9.917H8.114z"/>
@@ -67,12 +67,12 @@
                   <path fill="#D22856" d="M10.734,34.072c-1.519,0-2.749-1.23-2.749-2.75c0,1.52-1.23,2.75-2.749,2.75 c1.519,0,2.749,1.229,2.749,2.748C7.985,35.303,9.215,34.072,10.734,34.072z"/>
                 </g>
               </g>
-            </symbol>
+            </symbol-->
           </svg>
           <svg  width="74.426px" height="22.859px">
-            <use class="page-header__logo-mobile" xlink:href="#page-header__logo-mobile"></use>
-            <use class="page-header__logo-tablet" xlink:href="#page-header__logo-tablet"></use>
-            <use class="page-header__logo-desktop" xlink:href="#page-header__logo-desktop"></use>
+            <use class="page-header__logo-mobile" xlink:href="img/sprite.svg#icon-logo-pink-white-mobile"></use>
+            <use class="page-header__logo-tablet" xlink:href="img/sprite.svg#icon-logo-pink-white-tablet"></use>
+            <use class="page-header__logo-desktop" xlink:href="img/sprite.svg#icon-logo-pink-white-desktop"></use>
           </svg>
         </a>
         <nav class="page-header__main-nav main-nav main-nav--closed main-nav--nojs">
