--- a/source/form.html
+++ b/source/form.html
@@ -188,7 +188,7 @@
     <footer class="page-footer page-footer--active">
       <div class="page-footer__wrapper container">
         <a class="page-footer__logo" href="index.html">
-          <svg style="display: none;">
+          <!--svg style="display: none;">
             <symbol id="logo-tablet" viewBox="0 0 146.3 40.375">
               <g class="page-footer__logo-pink">
                 <path fill="#283645" d="M71.874,18.661c0-0.708,0.58-1.288,1.256-1.288h7.18c5.087,0,8.436,2.704,8.436,7.146v0.064 c0,4.861-4.057,7.373-8.854,7.373h-5.475v6.825c0,0.708-0.58,1.288-1.288,1.288c-0.676,0-1.256-0.58-1.256-1.288V18.661z M79.988,29.641c3.734,0,6.182-1.996,6.182-4.959v-0.063c0-3.22-2.414-4.894-6.053-4.894h-5.699v9.917H79.988L79.988,29.641z"/>
@@ -228,10 +228,10 @@
                 </g>
               </g>
             </symbol>
-          </svg>
+          </svg-->
           <svg width="148px" height="40px">
-            <use class="page-footer__logo-tablet" xlink:href="#logo-tablet"></use>
-            <use class="page-footer__logo-desktop" xlink:href="#logo-desktop"></use>
+            <use class="page-footer__logo-tablet" xlink:href="img/sprite.svg#icon-logo-pink-blue-mobile"></use>
+            <use class="page-footer__logo-desktop" xlink:href="img/sprite.svg#icon-logo-pink-blue-desktop"></use>
           </svg>
         </a>
         <ul class="page-footer__social social">
@@ -248,8 +248,8 @@
         <div class="page-footer__copyright copyright">
           <p class="copyright__paragraf">Разработано</p>
           <a class="copyright__logo" href="https://htmlacademy.ru/intensive/adaptive">
-              <svg width="40px" height="48px" viewBox="0 0 60 60" fill="#2E368F">
-                <path d="M30.2 5h-.2l-19.7 2.1v36.2l19.7 11.7 19.7-11.7v-36.2l-19.5-2.1zm17 36.8l-17.2 10.2-17.2-10.2v-14.8l17.1 10.2v1.8l-11.7-7v1.8l11.8 7.1v1.9l-11.8-7v1.8l11.8 7 11.9-7.1v-7.6l5.3-3.2v15.1zm-.1-17l-4.7 2.8-2.2 1.3-10.3-6.1v1.8l8.8 5.3h-.1l-.2.1-1.3.7-7.3-4.3v1.8l5.8 3.4-1.4.9-4.3-2.6v1.8l2.9 1.7-2.9 1.7-17-10.1 17-10.2 17.2 10zm.1-1.8l-17.3-10.2-17.1 10.2v-13.6l17.2-1.8 17.2 1.8v13.6z"/>
+              <svg width="40px" height="48px" viewBox="0 0 60 60">
+                <use xlink:href="img/sprite.svg#icon-htmlacademy"></use>
               </svg>
           </a>
         </div>
