--- a/source/index.html
+++ b/source/index.html
@@ -9,7 +9,7 @@
       document.createElement( "picture" );
     </script>
     <script src="js/picturefill.min.js" async></script>
-    <script src="js/svg4everybody.min.js" async></script>
+    <script src="js/svg4everybody.min.js"></script>
     <link rel="preload" href="fonts/opensans.woff2" as="font">
   </head>
   <body>
@@ -20,9 +20,9 @@
       <div class="page-header__wrapper">
         <a class="page-header__logo">
           <svg  width="74.426px" height="22.859px">
-            <use class="page-header__logo-mobile" xlink:href="img/sprite.svg#icon-logo-pink-white-mobile"></use>
-            <use class="page-header__logo-tablet" xlink:href="img/sprite.svg#icon-logo-pink-white-tablet"></use>
-            <use class="page-header__logo-desktop" xlink:href="img/sprite.svg#icon-logo-pink-white-desktop"></use>
+            <use class="page-header__logo-mobile" xlink:href="#icon-logo-pink-white-mobile"></use>
+            <use class="page-header__logo-tablet" xlink:href="#icon-logo-pink-white-tablet"></use>
+            <use class="page-header__logo-desktop" xlink:href="#icon-logo-pink-white-desktop"></use>
           </svg>
         </a>
         <nav class="page-header__main-nav main-nav main-nav--closed main-nav--nojs">
@@ -229,8 +229,8 @@
       <div class="page-footer__wrapper container">
         <a class="page-footer__logo">
           <svg width="148px" height="40px">
-            <use class="page-footer__logo-tablet" xlink:href="img/sprite.svg#icon-logo-pink-blue-mobile"></use>
-            <use class="page-footer__logo-desktop" xlink:href="img/sprite.svg#icon-logo-pink-blue-desktop"></use>
+            <use class="page-footer__logo-tablet" xlink:href="#icon-logo-pink-blue-mobile"></use>
+            <use class="page-footer__logo-desktop" xlink:href="#icon-logo-pink-blue-desktop"></use>
           </svg>
         </a>
         <ul class="page-footer__social social">
@@ -248,7 +248,7 @@
           <p class="copyright__paragraf">Разработано</p>
           <a class="copyright__logo" href="https://htmlacademy.ru/intensive/adaptive">
             <svg width="40px" height="48px" viewBox="0 0 61 61">
-              <use xlink:href="img/sprite.svg#icon-htmlacademy"></use>
+              <use xlink:href="#icon-htmlacademy"></use>
             </svg>
           </a>
         </div>
