--- a/source/form.html
+++ b/source/form.html
@@ -11,6 +11,8 @@
     <script src="js/picturefill.min.js" async></script>
     <script src="js/svg4everybody.min.js" async></script>
     <link rel="preload" href="fonts/opensans.woff2" as="font">
+    <link rel="preload" href="fonts/opensansbold.woff2" as="font">
+    <link rel="preload" href="fonts/opensanslight.woff2" as="font">
   </head>
   <body>
     <div style="display: none">
@@ -51,7 +53,7 @@
       <div class="form-title">
         <h1 class="form-title__tender container"> Конкурс на самое безбашенное путешествие с Пинк</h1>
       </div>
-      <p class="histori container">Поделитесь своей историей и получите шанс выиграть ценный приз &#8212; 1000 миль на вашу бонусную карту!<span class="histori__write"> Пожалуйста, заполните форму ниже:</span>
+      <p class="history container">Поделитесь своей историей и получите шанс выиграть ценный приз &#8212; 1000 миль на вашу бонусную карту!<span class="history__write"> Пожалуйста, заполните форму ниже:</span>
       </p>
       <form class="form" action="https://echo.htmlacademy.ru" method="post">
         <fieldset class="form__personal container">
@@ -174,7 +176,7 @@
           </li>
         </ul>
         <div class="page-footer__copyright copyright">
-          <p class="copyright__paragraf">Разработано</p>
+          <p class="copyright__paragraph">Разработано</p>
           <a class="copyright__logo" href="https://htmlacademy.ru/intensive/adaptive">
               <svg width="40px" height="48px" viewBox="0 0 60 60">
                 <use xlink:href="#icon-htmlacademy"></use>
