--- a/source/index.html
+++ b/source/index.html
@@ -11,6 +11,8 @@
     <script src="js/picturefill.min.js" async></script>
     <script src="js/svg4everybody.min.js"></script>
     <link rel="preload" href="fonts/opensans.woff2" as="font">
+    <link rel="preload" href="fonts/opensansbold.woff2" as="font">
+    <link rel="preload" href="fonts/opensanslight.woff2" as="font">
   </head>
   <body>
     <div style="display: none">
@@ -27,22 +29,20 @@
         </a>
         <nav class="page-header__main-nav main-nav main-nav--closed main-nav--nojs">
           <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
-          <div class="main-nav__wrapper">
-            <ul class="main-nav__list site-list">
-              <li class="site-list__item site-list__item--active">
-                <a>Главная</a>
-              </li>
-              <li class="site-list__item">
-                <a href="photo.html">Фотографии</a>
-              </li>
-              <li class="site-list__item">
-                <a href="form.html">Конкурс</a>
-              </li>
-              <li class="site-list__item">
-                <a href="https://htmlacademy.ru/intensive/adaptive"><span class="site-list__item__upper">Html</span> Academy</a>
-              </li>
-            </ul>
-          </div>
+          <ul class="main-nav__list site-list">
+          <li class="site-list__item site-list__item--active">
+              <a>Главная</a>
+            </li>
+            <li class="site-list__item">
+              <a href="photo.html">Фотографии</a>
+            </li>
+            <li class="site-list__item">
+              <a href="form.html">Конкурс</a>
+            </li>
+            <li class="site-list__item">
+              <a href="https://htmlacademy.ru/intensive/adaptive"><span class="site-list__item__upper">Html</span> Academy</a>
+            </li>
+          </ul>
         </nav>
       </div>
     </header>
@@ -52,7 +52,7 @@
       <section class="download">
         <div class="download__wrapper container">
           <h2 class="visually-hidden">Загрузка приложения</h2>
-          <p class="download__paragraf">Взгляните на жизнь иначе!</p>
+          <p class="download__paragraph">Взгляните на жизнь иначе!</p>
           <a class="download__button button" href="https://www.apple.com/ru/ios/app-store/">Скачать приложение</a>
           <ul class="download__icon icon-list">
             <li class="icon-list__item icon-list__item--ios"><a href="https://www.apple.com/ru/ios/app-store/"><span class="visually-hidden">Иконка ios</span></a></li>
@@ -66,8 +66,8 @@
       <section class="advantages">
         <div class="advantages__wrapper container">
           <h2 class="visually-hidden">Наши преимущества</h2>
-          <p class="advantages__paragraf">Устали от серости мегаполиса?</p>
-          <p class="advantages__paragraf">Нам есть, что&nbsp;вам предложить!</p>
+          <p class="advantages__paragraph">Устали от серости мегаполиса?</p>
+          <p class="advantages__paragraph">Нам есть, что&nbsp;вам предложить!</p>
           <ul class="advantages__list">
             <li class="advantages__item">
               <h3 class="advantages__title">Поднимает настроение</h3>
@@ -88,7 +88,7 @@
       <section class="timer">
         <div class="timer__wrapper  container">
           <h3 class="timer__title">Эффект<br> на 24 часа!</h3>
-          <p class="timer__paragraf">Британские учёные провели исследования и доказали,<br class="timer__desctop"> что положительный эффект<br class="timer__tablet"> от использования приложения длится целые сутки!</p>
+          <p class="timer__paragraph">Британские учёные провели исследования и доказали,<br class="timer__desktop"> что положительный эффект<br class="timer__tablet"> от использования приложения длится целые сутки!</p>
           <a class="timer__know" href="#">Узнать больше об исследовании</a>
         </div>
       </section>
@@ -245,7 +245,7 @@
           </li>
         </ul>
         <div class="page-footer__copyright copyright">
-          <p class="copyright__paragraf">Разработано</p>
+          <p class="copyright__paragraph">Разработано</p>
           <a class="copyright__logo" href="https://htmlacademy.ru/intensive/adaptive">
             <svg width="40px" height="48px" viewBox="0 0 61 61">
               <use xlink:href="#icon-htmlacademy"></use>
