--- a/source/form.html
+++ b/source/form.html
@@ -21,7 +21,7 @@
     <header class="page-header page-header--nojs">
       <div class="page-header__wrapper">
         <a class="page-header__logo" href="index.html">
-          <svg  width="74.426px" height="22.859px">
+          <svg  width="74.426" height="22.859">
             <use class="page-header__logo-mobile" xlink:href="#icon-logo-pink-white-mobile"></use>
             <use class="page-header__logo-tablet" xlink:href="#icon-logo-pink-white-tablet"></use>
             <use class="page-header__logo-desktop" xlink:href="#icon-logo-pink-white-desktop"></use>
@@ -159,7 +159,7 @@
     <footer class="page-footer page-footer--active">
       <div class="page-footer__wrapper container">
         <a class="page-footer__logo" href="index.html">
-          <svg width="148px" height="40px">
+          <svg width="148" height="40">
             <use class="page-footer__logo-tablet" xlink:href="#icon-logo-pink-blue-mobile"></use>
             <use class="page-footer__logo-desktop" xlink:href="#icon-logo-pink-blue-desktop"></use>
           </svg>
@@ -178,7 +178,7 @@
         <div class="page-footer__copyright copyright">
           <p class="copyright__paragraph">Разработано</p>
           <a class="copyright__logo" href="https://htmlacademy.ru/intensive/adaptive">
-              <svg width="40px" height="48px" viewBox="0 0 60 60">
+              <svg width="40" height="48" viewBox="0 0 60 60">
                 <use xlink:href="#icon-htmlacademy"></use>
               </svg>
           </a>
