--- a/source/index.html
+++ b/source/index.html
@@ -21,7 +21,7 @@
     <header class="page-header page-header--nojs">
       <div class="page-header__wrapper">
         <a class="page-header__logo">
-          <svg  width="74.426px" height="22.859px">
+          <svg  width="74.426" height="22.859">
             <use class="page-header__logo-mobile" xlink:href="#icon-logo-pink-white-mobile"></use>
             <use class="page-header__logo-tablet" xlink:href="#icon-logo-pink-white-tablet"></use>
             <use class="page-header__logo-desktop" xlink:href="#icon-logo-pink-white-desktop"></use>
@@ -75,7 +75,7 @@
             </li>
             <li class="advantages__item">
               <h3 class="advantages__title">Меняет мир вокруг</h3>
-              <p class="advantages__description">Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы<br> усилить эффект</p>
+              <p class="advantages__description">Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить&nbsp;эффект</p>
             </li>
             <li class="advantages__item">
               <h3 class="advantages__title">Заводит новых&nbsp;друзей</h3>
@@ -88,7 +88,7 @@
       <section class="timer">
         <div class="timer__wrapper  container">
           <h3 class="timer__title">Эффект<br> на 24 часа!</h3>
-          <p class="timer__paragraph">Британские учёные провели исследования и доказали,<br class="timer__desktop"> что положительный эффект<br class="timer__tablet"> от использования приложения длится целые сутки!</p>
+          <p class="timer__paragraph">Британские учёные провели исследования и доказали, что&nbsp;положительный эффект от&nbsp;использования приложения длится целые сутки!</p>
           <a class="timer__know" href="#">Узнать больше об исследовании</a>
         </div>
       </section>
@@ -208,7 +208,7 @@
             </li>
             <li class="contacts__content">
               <p class="contacts__name">Приезжайте в гости:</p>
-              <p class="contacts__item">ул. Большая<br>Конюшенная, 19/8</p>
+              <p class="contacts__item">ул. Большая Конюшенная,&nbsp;19/8</p>
             </li>
           </ul>
         </div>
@@ -228,7 +228,7 @@
     <footer class="page-footer">
       <div class="page-footer__wrapper container">
         <a class="page-footer__logo">
-          <svg width="148px" height="40px">
+          <svg width="148" height="40">
             <use class="page-footer__logo-tablet" xlink:href="#icon-logo-pink-blue-mobile"></use>
             <use class="page-footer__logo-desktop" xlink:href="#icon-logo-pink-blue-desktop"></use>
           </svg>
@@ -247,7 +247,7 @@
         <div class="page-footer__copyright copyright">
           <p class="copyright__paragraph">Разработано</p>
           <a class="copyright__logo" href="https://htmlacademy.ru/intensive/adaptive">
-            <svg width="40px" height="48px" viewBox="0 0 61 61">
+            <svg width="40" height="48" viewBox="0 0 61 61">
               <use xlink:href="#icon-htmlacademy"></use>
             </svg>
           </a>
