--- a/source/photo.html
+++ b/source/photo.html
@@ -21,7 +21,7 @@
     <header class="page-header page-header--nojs">
       <div class="page-header__wrapper">
         <a class="page-header__logo" href="index.html">
-          <svg  width="74.426px" height="22.859px">
+          <svg  width="74.426" height="22.859">
             <use class="page-header__logo-mobile" xlink:href="#icon-logo-pink-white-mobile"></use>
             <use class="page-header__logo-tablet" xlink:href="#icon-logo-pink-white-tablet"></use>
             <use class="page-header__logo-desktop" xlink:href="#icon-logo-pink-white-desktop"></use>
@@ -257,7 +257,7 @@
                 <div class="post-form__block post-form__block--crop post-form__block--active">
                   <button class="post-form__button post-form__button--crop" type="button" name="button">
                     <span class="visually-hidden">обрезать фото</span>
-                    <svg width="48px" height="44px">
+                    <svg width="48" height="44">
                       <use class="post-form__svg-active" xlink:href="#icon-editor-crop"></use>
                     </svg>
                   </button>
@@ -283,7 +283,7 @@
                 <div class="post-form__block post-form__block--contrast">
                   <button class="post-form__button post-form__button--contrast" type="button" name="button">
                     <span class="visually-hidden">яркость</span>
-                    <svg width="32px" height="32px">
+                    <svg width="32" height="32">
                       <use class="post-form__svg-active" xlink:href="#icon-editor-contrast"></use>
                     </svg>
                   </button>
@@ -305,7 +305,7 @@
     <footer class="page-footer page-footer--active">
       <div class="page-footer__wrapper container">
         <a class="page-footer__logo" href="index.html">
-          <svg width="148px" height="40px">
+          <svg width="148" height="40">
             <use class="page-footer__logo-tablet" xlink:href="#icon-logo-pink-blue-mobile"></use>
             <use class="page-footer__logo-desktop" xlink:href="#icon-logo-pink-blue-desktop"></use>
           </svg>
@@ -324,7 +324,7 @@
         <div class="page-footer__copyright copyright">
           <p class="copyright__paragraph">Разработано</p>
           <a class="copyright__logo" href="https://htmlacademy.ru/intensive/adaptive">
-              <svg width="40px" height="48px" viewBox="0 0 60 60">
+              <svg width="40" height="48" viewBox="0 0 60 60">
                 <use xlink:href="#icon-htmlacademy"></use>
               </svg>
           </a>
