--- a/source/photo.html
+++ b/source/photo.html
@@ -57,7 +57,7 @@
       <section class="gallery">
         <h2 class="visually-hidden">Галерея</h2>
         <p class="gallery__show container">Взгляните на фотографии, которые выкладывают пользователи!
-          Видите, как не хватает ваших?
+          Видите,&nbsp;как не хватает ваших?
         </p>
 
         <article class="gallery__panorama panorama">
