--- a/source/photo.html
+++ b/source/photo.html
@@ -61,7 +61,9 @@
         </p>
 
         <article class="gallery__panorama panorama">
-          <h2 class="panorama__title">Панорама дня</h2>
+          <div class="panorama__title">
+            <h2>Панорама дня</h2>
+          </div>
           <a class="panorama__photo" href="img/panorama-desktop@2x.jpg">
             <picture>
               <source type="image/webp" media="(min-width: 960px)" srcset="img/panorama-desktop@1x.webp 1x, img/panorama-desktop@2x.webp 2x">
