--- a/source/index.html
+++ b/source/index.html
@@ -87,7 +87,7 @@
 
       <section class="timer">
         <div class="timer__wrapper  container">
-          <h3 class="timer__title">Эффект<br> на 24 часа!</h3>
+          <h3 class="timer__title">Эффект на&nbsp;24&nbsp;часа!</h3>
           <p class="timer__paragraph">Британские учёные провели исследования и доказали, что&nbsp;положительный эффект от&nbsp;использования приложения длится целые сутки!</p>
           <a class="timer__know" href="#">Узнать больше об исследовании</a>
         </div>
