--- a/source/photo.html
+++ b/source/photo.html
@@ -272,7 +272,7 @@
                 <div class="post-form__block post-form__block--fill">
                   <button class="post-form__button post-form__button--fill" type="button" name="button">
                     <span class="visually-hidden">контрастность</span>
-                    <svg width="48px" height="44px">
+                    <svg width="48" height="44">
                       <use class="post-form__svg-active" xlink:href="#icon-editor-fill"></use>
                     </svg>
                   </button>
